# vision-rag

./: .gitignore  README.md  main.py  pyproject.toml  test-docling.ipynb  ui.py
api/core/: document_processor.py  embedding.py  retriever.py
api/routers/: query.py  uploadfile.py
api/schemas/: document_processor.py
api/utils/: config.py
